content/vault/v1.4.x/content/docs/commands/kv/delete.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: kv delete - Command
sidebar_title: <code>delete</code>
description: |-
  The "kv delete" command disables a secrets engine at a given PATH. The
  argument corresponds to the enabled PATH of the engine, not the TYPE! All
  secrets created by this engine are revoked and its Vault data is removed.
---

# kv delete

The `kv delete` command deletes the data for the provided path in
the key/value secrets engine. If using K/V Version 2, its versioned data will
not be fully removed, but marked as deleted and will no longer be returned in
normal get requests.

## Examples

Delete the latest version of the key "creds":

```text
$ vault kv delete secret/creds
Success! Data deleted (if it existed) at: secret/creds
```

**[K/V Version 2]** Delete version 11 of key "creds":

```text
$ vault kv delete -versions=11 secret/creds
Success! Data deleted (if it existed) at: secret/creds
```

## Usage

There are no flags beyond the [standard set of flags](/vault/docs/commands)
included on all commands.

### Command Options

- `-versions` `([]int: <required>)` - The versions to be deleted. The versioned
  data will not be deleted, but it will no longer be returned in normal get
  requests.

~> **NOTE:** This command option is only for K/V v2.
